2004-08-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Really set ai_canonname
	only in one entry.

2004-08-13  Daniel Jacobowitz  <dan@debian.org>

	* scripts/output-format.sed: Handle default case of three-argument
	OUTPUT_FORMAT.

	* sysdeps/arm/machine-gmon.h (mcount_internal): Mark as
	__attribute_used__.

2004-08-13  Ulrich Drepper  <drepper@redhat.com>

	* nss/getent.c (ahosts_keys): ai_canonname is NULL for all but the
	first returned entry.  Print name only if not NULL.

	* nis/nss_nis/nis-netgrp.c: Remove locking by using data in struct
	__netgrent object passed in instead of global variables.
	Optimize.
	* nis/nss_nisplus/nisplus-netgrp.c: Remove locking by using data
	in struct __netgrent object passed in instead of global variables.
	* inet/netgroup.h (struct __netgrent): Add service_user field.
	Move cursor in anonymous union, add new field location to that
	union.
	* inet/getnetgrent_r.c: Extensive rewrite to really enable
	concurrent uset of set/get/endnetgrent and innetgr.
	Reported by Chuck Simmons.

	* inet/netgroup.h (struct name_list): Replace name pointer with
	zero-sized array.
	* inet/getnetgrent_r.c: Adjust code for change in name_list
	layout.  Numerous strdup and free calls removed.

	* elf/sprof.c (read_symbols): When comparing aliases, prefer
	non-hidden over hidden symbols and strong over weak symbols
	if both don't start with '_'.

	* malloc/malloc.c: Use strong_alias instead of weak_alias wherever
	possible.

2004-08-12  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/bits/resource.h: Define non-standard
	RUSAGE_ enums as __RUSAGE_ and adjust macros accordingly.
	* sysdeps/unix/sysv/linux/alpha/bits/resource.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/resource.h: Likewise.
	* sysdeps/unix/sysv/linux/mips/bits/resource.h: Likewise.
	Define non-standard RLIMIT_ enums as __RLIMIT_ and adjust macros
	accordingly.

2004-08-11  Andreas Schwab  <schwab@suse.de>
